<resources>
    <string name="app_name">TestUtils</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">进阶</string>
    <string name="title_notifications">我的</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="vibrator_short">短振动</string>
    <string name="vibrator_long">长振动</string>
    <string name="badge_add">加角标</string>
    <string name="badge_subtract">减角标</string>
    <string name="badge_remove">清除角标</string>
    <string name="keyboard_show">显示软键盘</string>
    <string name="keyboard_hide">隐藏软键盘</string>
    <string name="fingerprint">指纹验证</string>
    <string name="captchadialog">拼图验证</string>
    <string name="batterystate">电量</string>
    <string name="jpush_text">极光推送</string>
    <string name="gtpush_text">个推</string>
    <string name="xiaomi_push_text">小米</string>
    <string name="huawei_push_text">华为</string>
    <string name="oppo_push_text">oppo</string>
    <string name="vivo_push_text">vivo</string>
    <string name="meizu_push_text">魅族</string>
    <string name="online_push_text">在线通知</string>
    <string name="notification_name">IM即时通讯</string>
    <string name="off_noti_name">IM即时通讯离线推送</string>
    <string name="off_tip">当程序处于离线时新的消息会通过通知栏提醒用户</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radar_text">雷达图</string>
    <string name="table_text">表格</string>
    <string name="chart_text">Chart</string>
    <string name="alertdialog">AlertDialog</string>
    <string name="loaddialog">LoadDialog</string>

    <string name="class_name">com.heiguang.hgrcwandroid</string>
</resources>