<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PushActivity">

    <include layout="@layout/title_easy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/jpush_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jpush_text" />

        <Button
            android:id="@+id/gtpush_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gtpush_text" />

        <Button
            android:id="@+id/xiaomi_push_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xiaomi_push_text" />

        <Button
            android:id="@+id/huawei_push_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/huawei_push_text" />

        <Button
            android:id="@+id/oppo_push_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oppo_push_text" />

        <Button
            android:id="@+id/vivo_push_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vivo_push_text" />

        <Button
            android:id="@+id/meizu_push_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meizu_push_text" />

        <Button
            android:id="@+id/online_push_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online_push_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>