<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChartActivity">
    <include layout="@layout/title_easy"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/radar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radar_text"/>
        <Button
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/table_text"/>
        <Button
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chart_text"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>